--- a/app/src/main/res/layout/fragment_medicine_list.xml
+++ b/app/src/main/res/layout/fragment_medicine_list.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.MedicineListFragment">
+
     <SearchView
         android:id="@+id/textToSearch"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/btnFilter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnFilter"
-        app:layout_constraintBottom_toBottomOf="@id/btnFilter"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:queryHint="Название/Описание"/>
+        android:queryHint="Название/Описание"
+        app:layout_constraintBottom_toBottomOf="@id/btnFilter"
+        app:layout_constraintEnd_toStartOf="@id/btnFilter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btnFilter" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medications_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btnFilter"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="@dimen/usual"
         android:layout_marginTop="3dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_marginEnd="@dimen/usual"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnFilter" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnFilter"
+        style="?attr/materialIconButtonFilledTonalStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/medications_list"
+        android:layout_margin="5dp"
         android:text="@string/filter"
-        app:icon="@drawable/ic_filter" />
+        app:icon="@drawable/ic_filter"
+        app:layout_constraintEnd_toEndOf="@+id/medications_list"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
