--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -1,51 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="3dp"
     android:layout_marginStart="3dp"
     android:layout_marginEnd="3dp"
-    app:cardCornerRadius="@dimen/usual"
+    android:layout_marginBottom="3dp"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    app:cardCornerRadius="@dimen/usual">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="7"
             android:layout_gravity="center"
             android:layout_marginStart="5dp"
+            android:layout_weight="7"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/text_view_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textSize="20dp"
                 android:maxLines="3"
-                android:text="@string/med_name" />
+                android:text="@string/med_name"
+                android:textSize="20dp" />
+
             <TextView
                 android:id="@+id/medType"
-                android:textSize="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/test"/>
+                android:hint="@string/test"
+                android:textSize="15dp" />
         </LinearLayout>
 
         <ImageButton
-            android:layout_weight="1"
             android:id="@+id/btnAdd"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:background="@color/white"
-            android:src="@drawable/plus_app" />
+            android:src="@drawable/ic_unfavorite" />
 
     </LinearLayout>
 
