--- a/app/src/main/res/layout/fragment_medicine_list.xml
+++ b/app/src/main/res/layout/fragment_medicine_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
-        android:queryHint="Название/Описание"
+        android:queryHint="Имя/Описание"
         app:layout_constraintBottom_toBottomOf="@id/btnFilter"
         app:layout_constraintEnd_toStartOf="@id/btnFilter"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         style="?attr/materialIconButtonFilledTonalStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="5dp"
         android:text="@string/filter"
         app:icon="@drawable/ic_filter"
         app:layout_constraintEnd_toEndOf="@+id/medications_list"
