--- a/app/src/main/res/drawable/ic_info.xml
+++ b/app/src/main/res/drawable/ic_info.xml
@@ -1,13 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="25dp" android:viewportHeight="25" android:viewportWidth="25" android:width="25dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:viewportHeight="960" android:viewportWidth="960" android:width="24dp">
       
-    <group>
-            
-        <clip-path android:pathData="M0.313,0.846h24.258v23.918h-24.258z"/>
-            
-        <path android:fillAlpha="0.85" android:fillColor="#000000" android:pathData="M12.266,24.752C18.805,24.752 24.219,19.326 24.219,12.799C24.219,6.26 18.793,0.846 12.254,0.846C5.727,0.846 0.313,6.26 0.313,12.799C0.313,19.326 5.738,24.752 12.266,24.752ZM12.266,22.76C6.734,22.76 2.316,18.33 2.316,12.799C2.316,7.268 6.723,2.838 12.254,2.838C17.785,2.838 22.227,7.268 22.227,12.799C22.227,18.33 17.797,22.76 12.266,22.76Z"/>
-            
-        <path android:fillAlpha="0.85" android:fillColor="#000000" android:pathData="M10.215,19.361H14.984C15.465,19.361 15.84,19.01 15.84,18.529C15.84,18.072 15.465,17.709 14.984,17.709H13.531V11.744C13.531,11.111 13.215,10.689 12.617,10.689H10.414C9.934,10.689 9.559,11.053 9.559,11.51C9.559,11.99 9.934,12.342 10.414,12.342H11.668V17.709H10.215C9.734,17.709 9.359,18.072 9.359,18.529C9.359,19.01 9.734,19.361 10.215,19.361ZM12.16,8.744C13.016,8.744 13.684,8.064 13.684,7.209C13.684,6.354 13.016,5.674 12.16,5.674C11.316,5.674 10.637,6.354 10.637,7.209C10.637,8.064 11.316,8.744 12.16,8.744Z"/>
-          
-    </group>
+    <path android:fillColor="#8C1AF6" android:pathData="M440,680h80v-240h-80v240ZM480,360q17,0 28.5,-11.5T520,320q0,-17 -11.5,-28.5T480,280q-17,0 -28.5,11.5T440,320q0,17 11.5,28.5T480,360ZM480,880q-83,0 -156,-31.5T197,763q-54,-54 -85.5,-127T80,480q0,-83 31.5,-156T197,197q54,-54 127,-85.5T480,80q83,0 156,31.5T763,197q54,54 85.5,127T880,480q0,83 -31.5,156T763,763q-54,54 -127,85.5T480,880ZM480,800q134,0 227,-93t93,-227q0,-134 -93,-227t-227,-93q-134,0 -227,93t-93,227q0,134 93,227t227,93ZM480,480Z"/>
     
 </vector>
