--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,5 +2,8 @@
 <resources>
     <dimen name="search_bar">25dp</dimen>
     <dimen name="usual">10dp</dimen>
+    <dimen name="half_usual">5dp</dimen>
     <dimen name="space_sign">50dp</dimen>
+    <dimen name="main_width">170dp</dimen>
+    <dimen name="icon">24dp</dimen>
 </resources>
