--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="70dp"
     android:layout_marginStart="3dp"
     android:layout_marginEnd="3dp"
     android:layout_marginBottom="3dp"
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -34,8 +34,10 @@
 
             <TextView
                 android:id="@+id/medType"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_weight="0"
                 android:hint="@string/test"
                 android:textSize="15dp" />
         </LinearLayout>
