--- a/app/src/main/res/layout/fragment_info_medicine.xml
+++ b/app/src/main/res/layout/fragment_info_medicine.xml
@@ -16,7 +16,8 @@
             android:layout_weight="2"
             android:text="@string/title_info_medicine"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:gravity="center"/>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="wrap_content"
