--- a/app/src/main/res/layout/fragment_medicine_list.xml
+++ b/app/src/main/res/layout/fragment_medicine_list.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.MedicineListFragment">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnUp"
+        android:tint="@color/purple_200"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/usual"
+        android:src="@drawable/ic_arrow_up"
+        app:layout_constraintBottom_toBottomOf="@id/medications_list"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <SearchView
         android:id="@+id/textToSearch"
         android:layout_width="0dp"
@@ -38,7 +48,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="@string/filter"
+        android:textSize="16sp"
         app:icon="@drawable/ic_filter"
+        app:iconTint="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/medications_list"
         app:layout_constraintTop_toTopOf="parent" />
 
