--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <!--background colors-->
+    <color name="ic_launcher_background">#FFBB86FC</color>
     <color name="background_color">#C6D2F5</color>
     <color name="background_color_50">#B3FFFFFF</color>
     <!--text colors-->
