--- a/app/src/main/res/layout/fragment_medicine_detail.xml
+++ b/app/src/main/res/layout/fragment_medicine_detail.xml
@@ -51,13 +51,13 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/usual"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/medicineDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/usual"
                     android:text="@string/medicine_description"
                     android:textSize="19sp" />
 
@@ -65,6 +65,7 @@
                     android:id="@+id/medicineDosage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/usual"
                     android:text="@string/dosage"
                     android:textSize="19sp" />
 
@@ -72,6 +73,7 @@
                     android:id="@+id/medicineSideEffects"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/usual"
                     android:text="@string/side_effects"
                     android:textSize="19sp" />
 
@@ -79,14 +81,16 @@
                     android:id="@+id/medicineInteractions"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/usual"
                     android:text="@string/interaction"
                     android:textSize="19sp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/medicineCard"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/medicineCard" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
