--- a/app/src/main/res/layout/author_info_dialog.xml
+++ b/app/src/main/res/layout/author_info_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -14,9 +14,9 @@
 
     <TextView
         android:id="@+id/author_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:textAlignment="center"
         android:layout_marginTop="16dp"
         android:text="@string/name"
         android:textSize="18sp" />
