--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -9,8 +9,9 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/card_medicines"
-        app:layout_constraintStart_toStartOf="@id/app_name"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -25,13 +26,6 @@
             android:textStyle="bold"
             app:cardCornerRadius="16dp" />
     </com.google.android.material.card.MaterialCardView>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.255" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_vertical_center"
